frontend/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssr-frontend
  namespace: frontend
  labels:
    app: ssr-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ssr-frontend
  template:
    metadata:
      labels:
        app: ssr-frontend
    spec:
      containers:
      - name: ssr-frontend
        image: tkdqja9573/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /
            port: 8081
        resources:
          requests:
            cpu: "400m"
          limits:
            cpu: "800m"
---
apiVersion: v1
kind: Service
metadata:
  name: ssr-frontend
  namespace: frontend
  labels:
    app: ssr-frontend
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: ssr-frontend
  type: NodePort
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: frontend
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssr-frontend
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
    acme.cert-manager.io/http01-ingress-class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: frontend-redirect@kubernetescrd
spec:
  rules:
  - host: ssafy.picel.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssr-frontend
            port:
              number: 80
  tls:
    - hosts:
      - ssafy.picel.net
      secretName: frontend-tls
